; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/mt7621-pci/extr_pci-mt7621.c_mt7621_control_deassert.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/mt7621-pci/extr_pci-mt7621.c_mt7621_control_deassert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7621_pcie_port = type { i32 }

@MT7621_CHIP_REV_ID = common dso_local global i32 0, align 4
@CHIP_REV_MT7621_E2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mt7621_pcie_port*)* @mt7621_control_deassert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mt7621_control_deassert(%struct.mt7621_pcie_port* %0) #0 {
  %2 = alloca %struct.mt7621_pcie_port*, align 8
  %3 = alloca i32, align 4
  store %struct.mt7621_pcie_port* %0, %struct.mt7621_pcie_port** %2, align 8
  %4 = load i32, i32* @MT7621_CHIP_REV_ID, align 4
  %5 = call i32 @rt_sysc_r32(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = and i32 %6, 65535
  %8 = load i32, i32* @CHIP_REV_MT7621_E2, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.mt7621_pcie_port*, %struct.mt7621_pcie_port** %2, align 8
  %12 = getelementptr inbounds %struct.mt7621_pcie_port, %struct.mt7621_pcie_port* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @reset_control_deassert(i32 %13)
  br label %20

15:                                               ; preds = %1
  %16 = load %struct.mt7621_pcie_port*, %struct.mt7621_pcie_port** %2, align 8
  %17 = getelementptr inbounds %struct.mt7621_pcie_port, %struct.mt7621_pcie_port* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @reset_control_assert(i32 %18)
  br label %20

20:                                               ; preds = %15, %10
  ret void
}

declare dso_local i32 @rt_sysc_r32(i32) #1

declare dso_local i32 @reset_control_deassert(i32) #1

declare dso_local i32 @reset_control_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
